Fixes #973: Layout of input field text on safari

--- a/src/backend/_scss/application.scss
+++ b/src/backend/_scss/application.scss
@@ -1224,6 +1224,10 @@ a {
     font-family: sans-serif;
   }
 
+  input {
+    line-height: 24px;
+  }
+
   @media only screen and (max-width: 600px) {
     float: none;
 
